<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    SLIDE MENU
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    // BOTTOM NAVIGATION
    <string name="nav_menu_map">Map View</string>
    <string name="nav_menu_list">List View</string>
    <string name="nav_menu_workmates">Workmates</string>

    // Fragment Toolbar Title
    <string name="toolbar_fragment_map">I\'m Hungry!</string>
    <string name="toolbar_fragment_List">I\'m Hungry!</string>
    <string name="toolbar_fragment_workmates">Available workmates</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id">2826630187580441</string>
    <string name="facebook_login_protocol_scheme">fb2826630187580441</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">19274023</string>
    <string name="twitter_consumer_secret" translatable="false">iZg4dERcxefxlBPkmxgELw9J2taseixCWThU9b82iIK2A4PJZz</string>

    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>



    <string name="title_activity_your_lunch">ScrollingActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Restaurant List Fragment -->

    <string name="restaurant_open">Actually open</string>
    <string name="restaurant_close">Actually closed</string>
    <string name="no_hour_data">no data</string>

    <!-- WORKMATES FRAGMENT -->
    <string name="restaurant_chosen">is eating at</string>
    <string name="no_restaurant_chosen">hasn\'t decided yet</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>


    //Test

    <string name="type">restaurant</string>
    <integer name="radius">5000</integer>
    <string name="latitude">25.0805</string>
    <string name="longitude">55.1403</string>
    <string name="search">Search</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="actually">Actuellement ouvert</string>
    <string name="no_result_autocomplete">no result match in your area</string>

</resources>