<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_nav_map">

    <fragment
        android:id="@+id/bottom_nav_map"
        android:name="com.example.go4lunch.views.fragments.MapsFragment"
        android:label="@string/nav_menu_map"
        tools:layout="@layout/fragment_maps">

    </fragment>

    <fragment
        android:id="@+id/bottom_nav_list"
        android:name="com.example.go4lunch.views.fragments.ItemRestaurant"
        android:label="@string/nav_menu_list"
        tools:layout="@layout/fragment_item_list_restaurant">

    </fragment>

    <fragment
        android:id="@+id/bottom_nav_workmates"
        android:name="com.example.go4lunch.views.fragments.WorkMatesListFragment"
        android:label="@string/nav_menu_workmates"
        tools:layout="@layout/fragment_item_list_workmates">

    </fragment>

</navigation>