<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">
    <androidx.cardview.widget.CardView
        android:id="@+id/detail_restaurant_picture_CardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.20">
        <ImageView
            android:id="@+id/detail_restaurant_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Reserv_Restaurant_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="-29dp"
        android:layout_marginTop="-29dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        app:tint="@color/green_light"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:backgroundTint="@color/orange">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Le zinc"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:maxWidth="290dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/detail_like_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_restaurant_name"
                tools:src="@drawable/ic_baseline_star_rate_24"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/detail_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_restaurant_name"
                android:text="20 rue des android"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/detail_restaurant_callButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:drawableTop="@drawable/ic_baseline_call_24"
                android:layout_marginStart="16dp"
                android:text="@string/call"
                android:clickable="true"
                android:textColor="@color/orange"/>

            <Button
                android:id="@+id/detail_restaurant_likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:background="@color/fui_transparent"
                android:drawableTop="@drawable/ic_baseline_star_24"
                android:text="@string/like"
                android:clickable="true"
                android:textColor="@color/orange"/>

            <Button
                android:id="@+id/detail_restaurant_websiteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:background="@color/fui_transparent"
                android:drawableTop="@drawable/ic_baseline_public_24"
                android:text="@string/website"
                android:textColor="@color/orange"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmates_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.20"
        android:layout_margin="20dp"
        tools:listitem="@layout/fragment_item_list_workmates"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />




</LinearLayout>