<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="200dp">

</androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        tools:src="@drawable/ic_baseline_check_circle_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="100dp"
           android:weightSum="3">
           <RelativeLayout
               android:id="@+id/call_component"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:clickable="true">
               <ImageView
                   android:id="@+id/icon_call"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:layout_centerHorizontal="true"
                   android:background="@color/orange"
                   tools:src="@drawable/ic_baseline_call_24"  />
               <TextView
                   android:id="@+id/text_icon_call"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/icon_call"
                   android:layout_marginTop="10dp"
                   android:layout_centerVertical="true"
                   android:layout_centerHorizontal="true"
                   android:textColor="@color/orange"
                   android:text="@string/call"/>
           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/like_component"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:clickable="true">
               <ImageView
                   android:id="@+id/icon_like"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:layout_centerHorizontal="true"
                   tools:src="@drawable/ic_baseline_star_rate_24"/>
               <TextView
                   android:id="@+id/text_icon_like"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/icon_like"
                   android:layout_centerHorizontal="true"
                   android:text="@string/like"
                   android:textColor="@color/orange"
                   android:layout_marginTop="10dp"/>
           </RelativeLayout>

           <RelativeLayout
               android:id="@+id/website_component"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:clickable="true">
               <ImageView
                   android:id="@+id/icon_website"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:layout_centerHorizontal="true"
                   tools:src="@drawable/ic_baseline_public_24"/>
               <TextView
                   android:id="@+id/text_icon_website"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/icon_website"
                   android:layout_centerHorizontal="true"
                   android:text="@string/website"
                   android:textColor="@color/orange"
                   android:layout_marginTop="10dp"/>
           </RelativeLayout>

       </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/detail_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Le zinc"
            android:textColor="@color/orange" />

        <ImageView
            android:id="@+id/detail_restaurant_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/detail_restaurant_name"
            android:layout_alignParentTop="true"
            tools:src="@drawable/ic_baseline_star_rate_24" />

        <TextView
            android:id="@+id/detail_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_restaurant_name"
            android:layout_marginTop="10dp"
            android:text="30 rue des lauriers - koran restaurant" />
    </RelativeLayout>

</LinearLayout>